# decentra

./: .gitignore  README.md  pyproject.toml
docs/: scorecard_stability.md
notebooks/: 02_base_model.ipynb  04_surrogate_logit.ipynb  07_calibration_bin.ipynb  08_quantile_surrogate.ipynb  92_scorecard_stability.ipynb  N01_data_preparation.ipynb  N02_base_model.ipynb  N03_surrogate_zoo.ipynb  N04_calibration.ipynb  N05_interventional_fidelity.ipynb  N06_cutoff_and_complexity.ipynb  N07_summary.ipynb  NB01_data_preparation.ipynb  NB02_base_model.ipynb  NB03_surrogate_zoo.ipynb  NB04_independence_finding.ipynb  NB05_calibration.ipynb  NB06_interventional_fidelity.ipynb  NB07_xgboost_robustness.ipynb  NB08_cutoff_sensitivity.ipynb  N_CV_cross_validation.ipynb  _e1_universal_interventional.py  _e2_quantile_ablation.py  _e3_cv_5fold.py  _e4_shap_pdp_d5.py  _e5_shap_pdp_cv.py  _e6_sequential_priority_cv.py  _generate_cv_notebook.py  _generate_new_notebooks.py  _pilot_run.py  _ridge_scaling_ablation.py  executor.py
notebooks/_archive/: 01_data_preparation.ipynb  03_surrogate_comparison.ipynb  04_weighted_surrogate.ipynb  05_calibration_feature.ipynb  08_interventional_fidelity.ipynb  91_gmsc_scorecard.ipynb
src/decentra/: __init__.py  _utils.py  scorecard.py  scorecard_model.py  stats.py
src/decentra/calibration/: __init__.py  bin.py  feature.py
src/decentra/experiments/: __init__.py  benchmark.py
src/decentra/metrics/: __init__.py  attribution.py  interventional.py  named.py  (+1 more)
tests/: local_scorecard_explainer.py  test_feature_calibrator.py  test_shap_pdp.py
(+7 files in other folders)
